# 3D-Rasterizer-in-CPP-using-SDL3

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: material.hpp  math.hpp  mesh.hpp  render.hpp
